Fixed ProfileComponent alignment

--- a/iFridge-client/src/app/profile/profile.component.scss
+++ b/iFridge-client/src/app/profile/profile.component.scss
@@ -1,6 +1,7 @@
-ody{
-    margin-top:20px;
-    background:#f5f5f5;
+
+.custom-css-profile {
+  padding-top: 65px;
+  background:#f5f5f5;
 }
 /**
  * Panels
@@ -86,4 +87,3 @@ form label {
   margin-top: 196px;
   border: 4px solid #f3f3f3;
 }
-                                    
